k8s/node-frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-frontend
  template:
    metadata:
      labels:
        app: node-frontend
    spec:
      containers:
        - name: node-frontend
          image: ghcr.io/sagarkpanda/node-frontend

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault

          ports:
            - containerPort: 3000
