k8s/node-frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-frontend
spec:
  selector:
    app: node-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
