k8s/node-frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-frontend
  namespace: otel-labs

spec:
  ingressClassName: traefik

  rules:
    - host: otel.sagarpanda.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-frontend
                port:
                  number: 3000
